--- a/scripting.ipynb
+++ b/scripting.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -26,17 +26,17 @@
     }
    ],
    "source": [
-    "dump = mwxml.Dump.from_file(open(r\"data\\enwiki-20241101-pages-articles-multistream.xml\\enwiki-20241101-pages-articles-multistream.xml\", encoding=\"utf8\"))\n",
+    "dump = mwxml.Dump.from_file(open(r\"Wikipidea-Rag\\wikipidea_rag\\data\\enwiki-20241101-pages-articles-multistream.xml\\enwiki-20241101-pages-articles-multistream.xml\", encoding=\"utf8\"))\n",
     "print(dump.site_info.name, dump.site_info.dbname)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dump = mwxml.Dump.from_file(open(r\"data\\enwiki-20241101-pages-articles-multistream.xml\\enwiki-20241101-pages-articles-multistream.xml\", encoding=\"utf8\"))\n",
+    "dump = mwxml.Dump.from_file(open(r\"Wikipidea-Rag\\wikipidea_rag\\data\\enwiki-20241101-pages-articles-multistream.xml\\enwiki-20241101-pages-articles-multistream.xml\", encoding=\"utf8\"))\n",
     "\n",
     "page_id = []\n",
     "page_title = []\n",
