--- a/pages.ipynb
+++ b/pages.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
     }
    ],
    "source": [
-    "dump = mwxml.Dump.from_file(open(r\"data\\enwiki-20241101-pages-articles-multistream.xml\\enwiki-20241101-pages-articles-multistream.xml\", encoding=\"utf8\"))\n",
+    "dump = mwxml.Dump.from_file(open(r\"Wikipidea-Rag\\wikipidea_rag\\data\\enwiki-20241101-pages-articles-multistream.xml\\enwiki-20241101-pages-articles-multistream.xml\", encoding=\"utf8\"))\n",
     "print(dump.site_info.name, dump.site_info.dbname)"
    ]
   },
