--- a/scripting.ipynb
+++ b/scripting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,13 +62,13 @@
     "            page_title.append(page.title)            \n",
     "            if index2 == 1:\n",
     "                break\n",
-    "    if index == 1000:\n",
+    "    if index == 10:\n",
     "                break\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,36 +92,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 14431 entries, 0 to 14430\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column           Non-Null Count  Dtype \n",
-      "---  ------           --------------  ----- \n",
-      " 0   section_titles   13698 non-null  object\n",
-      " 1   section_text     14431 non-null  object\n",
-      " 2   section_level    14431 non-null  int64 \n",
-      " 3   section_page_id  14431 non-null  int64 \n",
-      "dtypes: int64(2), object(2)\n",
-      "memory usage: 451.1+ KB\n"
+      "('\\n'\n",
+      " '\\n'\n",
+      " '\\n'\n",
+      " '\\n'\n",
+      " '\\n'\n",
+      " '\\n'\n",
+      " '\\n'\n",
+      " '\\n'\n",
+      " '\\n'\n",
+      " 'Anarchism is a political philosophy and movement that is against all forms '\n",
+      " 'of authority and seeks to abolish the institutions it claims maintain '\n",
+      " 'unnecessary coercion and hierarchy, typically including the state and '\n",
+      " 'capitalism. Anarchism advocates for the replacement of the state with '\n",
+      " 'stateless societies and voluntary free associations. A historically '\n",
+      " 'left-wing movement, anarchism is usually described as the libertarian wing '\n",
+      " 'of the socialist movement (libertarian socialism).\\n'\n",
+      " '\\n'\n",
+      " 'Although traces of anarchist ideas are found all throughout history, modern '\n",
+      " 'anarchism emerged from the Enlightenment. During the latter half of the 19th '\n",
+      " 'and the first decades of the 20th century, the anarchist movement flourished '\n",
+      " \"in most parts of the world and had a significant role in workers' struggles \"\n",
+      " 'for emancipation. Various anarchist schools of thought formed during this '\n",
+      " 'period. Anarchists have taken part in several revolutions, most notably in '\n",
+      " 'the Paris Commune, the Russian Civil War and the Spanish Civil War, whose '\n",
+      " 'end marked the end of the classical era of anarchism. In the last decades of '\n",
+      " 'the 20th and into the 21st century, the anarchist movement has been '\n",
+      " 'resurgent once more, growing in popularity and influence within '\n",
+      " 'anti-capitalist, anti-war and anti-globalisation movements.\\n'\n",
+      " '\\n'\n",
+      " 'Anarchists employ diverse approaches, which may be generally divided into '\n",
+      " 'revolutionary and evolutionary strategies; there is significant overlap '\n",
+      " 'between the two. Evolutionary methods try to simulate what an anarchist '\n",
+      " 'society might be like, but revolutionary tactics, which have historically '\n",
+      " 'taken a violent turn, aim to overthrow authority and the state. Many facets '\n",
+      " 'of human civilization have been influenced by anarchist theory, critique, '\n",
+      " 'and praxis.\\n'\n",
+      " '\\n'\n",
+      " '\\n')\n"
      ]
     }
    ],
    "source": [
-    "section_data.info()"
+    "pprint.pprint(section_data.loc[0,\"section_text\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m parsed \u001b[38;5;241m=\u001b[39m wtp\u001b[38;5;241m.\u001b[39mparse(\u001b[43mpage_text\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[0;32m      3\u001b[0m section_titles\u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      4\u001b[0m section_text \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "parsed = wtp.parse(page_text[0])\n",
     "\n",
